<resources>
    <string name="app_name">Masyarakat</string>
    <string name="notification_foto">Notification Foto</string>
    <string name="loading">Loading…</string>
    <string name="image_from_firebase">image firebase</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oke">OKE</string>
    <string name="banjir_sungai">Banjir Sungai</string>
    <string name="status">Status</string>
    <string name="keterangan">Keterangan</string>
    <string name="tempat_pengungsian">Tempat Pengungsian</string>
</resources>
